--- a/pilot-react/package.json
+++ b/pilot-react/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "devextreme": "24.2",
+    "devextreme-react": "24.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
