--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,11 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Run integration tests
-        run: docker-compose -f docker-compose.test.yml up --abort-on-container-exit
+        run: docker compose -f docker-compose.test.yml up --abort-on-container-exit
       
       - name: Cleanup
         if: always()
-        run: docker-compose -f docker-compose.test.yml down -v
+        run: docker compose -f docker-compose.test.yml down -v
 
   # Build Docker Images
   build:
